DATE       AUTHOR      CHANGE
---------- ----------- --------------------------------------------------------
2010-07-24 patrick     Implemented synchronized eevnt delivery.
                       NEW VERSION: 2.1.3
2010-07-20 patrick     Added gadget::ProxyTraits<T> and the event interface
                       core architecture. Only immediate event delivery is
                       implemented so far.
                       NEW VERSION: 2.1.2
2010-07-12 patrick     Added gadget::DeviceTraits<T> and gadget::DeviceData<T>.
                       Refactored gadget::TypedProxy<T> so that every proxy
                       type has a (virtual) getData() method that returns the
                       data specific to its device type.
                       NEW VERSION: 2.1.1
2010-06-19 patrick     VR Juggler 3.0 branch created.
                       NEW VERSION: 2.1.0